bi图表开发以及部分图片新闻bug修复

--- a/html/bi.html
+++ b/html/bi.html
@@ -1,235 +1,20 @@
 <html>
 <head>
-<title>首页</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0" />
-<link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile.min.css" />
-<link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" />
-<script src="../lib/jquery-cookie/jquery.cookie.js"></script>
-<script src="../lib/encrypt/encrypt.js"></script>
-<script src="../lib/json/json2.js"></script>
-<script src="../lib/hori/hori.js?tag=21369"></script>
-<script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>
-<script src="../lib/app/home/app.js"></script>
-<script src="../config/web/config.js"></script>
-<!--demo展示所用css，不用关心 begin-->
-<link rel="stylesheet" type="text/css" href="src/navigator/reset.css" />
-<!--demo展示所用css end-->
-<!--组件依赖css begin-->
-<link rel="stylesheet" type="text/css"
-	href="src/navigator/navigator.css" />
-<link rel="stylesheet" type="text/css"
-	href="src/navigator/navigator.default.css" />
-<!--皮肤文件，若不使用该皮肤，可以不加载-->
-<!--组件依赖css end-->
-
-<!--组件依赖js begin-->
-<script type="text/javascript" src="src/extend/zepto.js"></script>
-<script type="text/javascript" src="src/extend/touch.js"></script>
-<script type="text/javascript" src="src/extend/iscroll.js"></script>
-<script type="text/javascript" src="src/extend/highlight.js"></script>
-<script type="text/javascript" src="src/extend/parseTpl.js"></script>
-<script type="text/javascript" src="src/core/gmu.js"></script>
-<script type="text/javascript" src="src/core/event.js"></script>
-<script type="text/javascript" src="src/core/widget.js"></script>
-<script type="text/javascript" src="src/widget/navigator/navigator.js"></script>
-<script type="text/javascript" src="src/widget/navigator/$scrollable.js"></script>
-<script src="../lib/knockout/knockout.js"></script>
-<script src="../lib/knockout/knockout.mapping.js"></script>
-<script type="text/javascript"
-	src="src/widget/navigator/scrolltonext.js"></script>
-<style type="text/css">
-#nav2 {
-	background: transparent;
-	border-width: 0;
-	display: -webkit-box;
-	-webkit-box-flex: 1;
-}
-
-#nav2 li a {
-	color: #333;
-}
-
-#nav2 li.ui-state-active, #nav2 li.ui-state-hover {
-	background: transparent;
-}
-
-#nav2 li.ui-state-active a, #nav2 li.ui-state-hover a {
-	color: #e81459;
-}
-
-#nav2 .ui-scroller {
-	position: relative;
-}
-
-#nav2 .bar {
-	position: absolute;
-	height: 2px;
-	bottom: 0;
-	overflow: hidden;
-	-webkit-box-sizing: border-box;
-	padding: 0 10px;
-	-webkit-transition: left 200ms ease-out;
-}
-
-#nav2 .bar:after {
-	content: '';
-	display: block;
-	height: 2px;
-	background-color: #e81459;
-}
-
-#nav2_wrap {
-	display: -webkit-box;
-}
-
-#arrow {
-	width: 30px;
-	-webkit-box-flex: 0;
-	-webkit-box-align: center;
-	-webkit-box-pack: center;
-	display: -webkit-box;
-}
-
-#iframe {
-	width: 100%;
-}
-
-.ui-scroller {
-	float: left;
-}
-</style>
-
-<script type="text/javascript">
-	var currentUser = "";
-	$(document).ready(function() {
-		
-		var allData = [ {
-			'reportId' : 1,
-			'title' : '经营态势',
-			'target' : 'bi/jyts.html',
-			'img' : '../assets/home/task.png'
-		}, {
-			'reportId' : 6,
-			'title' : '收入利润趋势',
-			'target' : 'bi/srlrqs.html',
-			'img' : '../assets/home/news.png'
-		}, {
-			'reportId' : 11,
-			'title' : '收入完成',
-			'target' : 'bi/srwc.html',
-			'img' : '../assets/home/msg.png'
-		}, {
-			'reportId' : 16,
-			'title' : '利润完成',
-			'target' : 'bi/lrwc.html',
-			'img' : '../assets/home/task.png'
-		},
-
-		{
-			'reportId' : 21,
-			'title' : '风险状况',
-			'target' : 'bi/fxzk.html',
-			'img' : '../assets/home/task.png'
-		}, {
-			'reportId' : 31,
-			'title' : '收入板块',
-			'target' : 'bi/srbk.html',
-			'img' : '../assets/home/msg.png'
-		}, {
-			'reportId' : 36,
-			'title' : '利润板块',
-			'target' : 'bi/lrbk.html',
-			'img' : '../assets/home/news.png'
-		}, {
-			'reportId' : 66,
-			'title' : '收入利润',
-			'target' : 'bi/srlr.html',
-			'img' : '../assets/home/task.png'
-		} ];
-		var jsondata = localStorage.getItem("json");
-		var json = JSON.parse(jsondata);
-		var target=[];
-		for (var i = 0; i < json.length; i++) {
-			for (var j = 0; j < allData.length; j++) {
-				if (json[i].reportId == allData[j].reportId){
-					target.push(allData[j]); 
-					break;
-					}
-			}
-
-		}
-		var data = new Object();
-		data.list = target;
-		render(data);
-		try {
-			var hori = $.hori;
-			/*设置标题*/
-			//hori.setHeaderTitle("首页");
-			/*隐藏后退按钮*/
-			//hori.hideBackBtn();
-			/*注册注销事件*/
-			//hori.registerEvent("case", "navButtonTouchUp", function() {
-			//	hori.backPage(1);
-			//});
-			//if (hori.getMobileType() == "apple") {
-			//	$("#divMail").hide();
-			//}
-		} catch (e) {
-			alert(e.message);
-		}
-	});
-
-	function render(jsonData) {
-
-		var viewModel = ko.mapping.fromJS(jsonData);
-		ko.applyBindings(viewModel);
-		
-		initNav();
-		var winheight = $(window).height();
-		var iframeheight = winheight - $("#nav2_wrap").height() - 20;
-		$("#iframe").height(iframeheight);
-	}
-</script>
 </head>
 <body>
-	<div data-role="header"></div>
-	<div id="nav2_wrap" style="margin-top: 10px;">
-		<div id="nav2">
-			<ul data-bind="foreach: list">
-				<li data-icon="false"><a  data-bind="attr:{'href':target}" target="xianshi">
-						<img id="imgToDo" width="45" height="45"
-						data-bind="attr:{'src':img}" />
-				</a> <span style="color: #434343; font-size: 14px;"><strong><span
-							data-bind="text: title" /></span></strong></span>
-				</li>
-			</ul>
-			<span class="bar"></span>
+		<div >
+		<ul data-bind="foreach: list" id="loadBi" data-role="listview">
+				<li data-icon="false" class="ui-btn ui-btn-icon-right ui-li ui-li-has-thumb ui-first-child ui-last-child ui-btn-up-c">
+					<a  data-bind="click:loadRightBIContent"  >
+					<h3  class="ui-li-heading" style=" text-align:center;">
+						<span data-bind="text: title" />
+					</h3>
+				</a></li>
+			 </ul>
 		</div>
-
-		<script type="text/javascript">
-			function initNav() {
-				var bar = $('#nav2 span.bar'), left = $('#nav2 ul').offset().left;
-				$('#nav2').navigator({
-					select : function(e, index, li) {
-						bar.css({
-							left : li.offsetLeft - left,
-							width : li.childNodes[0].offsetWidth
-						});
-					},
-					ready : function() {
-						bar.appendTo($('#nav2').find('.ui-scroller'));
-					}
-				});
-
-				$('#arrow').on('click', function() {
-					$('#nav2').iScroll('scrollTo', 100, 0, 400, true);
-				});
-
-			};
-		</script>
 	</div>
-	<iframe frameborder=1 name="xianshi" id="iframe" src="bi/jyts.html"></iframe>
 </body>
 </html>
