--- a/html/ipad.html
+++ b/html/ipad.html
@@ -6,8 +6,8 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0">
 
+<link href="../lib/jquery-mobile/jquery.mobile-latest/jquery.mobile.min.css" rel="stylesheet"></link>
 <link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" />
-<link href="../lib/jquery-mobile/jquery.mobile.min.css" rel="stylesheet"></link>
 <link href="../lib/jquery-mobile/jquery-mobile-fluid960.css"
 	rel="stylesheet"></link>
 <script type="application/javascript" src="../assets/iscroll.js"></script>
@@ -16,7 +16,7 @@
 <script src="../lib/encrypt/encrypt.js"></script>
 <script src="../lib/json/json2.js"></script>
 <script src="../lib/hori/hori.js?tag=21369"></script>
-<script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>
+<script src="../lib/jquery-mobile/jquery.mobile-latest/jquery.mobile.min.js"></script>
 <script src="../lib/knockout/knockout-2.3.0.debug.js"></script>
 <script src="../lib/knockout/knockout.mapping.js"></script>
 <script src="../lib/swiper/idangerous.swiper.min.js"></script>
@@ -114,78 +114,124 @@
 a {
 	text-decoration: none;
 }
-
+#middleContent{
+border:0px;
+padding:3px; 
+PADDING:0px;  
+LINE-HEIGHT: 20px; 
+OVERFLOW: auto;
+margin-left: 10px;
+width:40%;
+selection：background:#a7bd06;color:#FFF;
+}
+#rightContent{
+border:0px;
+padding:3px; 
+PADDING:0px;  
+LINE-HEIGHT: 20px; 
+OVERFLOW: auto;
+margin-left: 10px;
+width:50%
+}
+#ul{
+border:0px;
+padding:3px; 
+PADDING:0px;  
+LINE-HEIGHT: 20px; 
+OVERFLOW: auto;
+width:100%;
+}
 .bubble-count {
 	font-size: 11px;
 	font-weight: bold;
 	padding: .2em .5em;
 	margin-left: -.5em;
 }
+.container_12 .grid_2 {
+width: 13%;
+}
 </style>
+
+<script >//修改div高度，与屏幕适应
+var sm;//中间属性
+var sr;//右侧属性
+var sul;
+
+window.onload=function()
+{
+//var w=document.documentElement.clientWidth ;//可见区域宽度
+var h=document.documentElement.clientHeight;//可见区域高度
+sm=document.getElementById('middleContent');
+
+sm.style.height=h+"px";
+sr=document.getElementById('rightContent');
+sr.style.height=h+"px";
+sul=document.getElementById('ul');
+sul.style.height=h+"px";
+}
+</script>
+
 </head>
-<body class="ui-mobile-viewport ui-overlay-c">
-
-	<div class="container_12">
-		<div class="grid_2">
-
-			<ul data-inset="true"
+<body class="ui-mobile-viewport ui-overlay-c" style="overflow-y: hidden; ">
+	<div class="container_12" style="width:100%;">
+		<div class="grid_2" >
+			<ul data-inset="true" id="ul"
 				class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
-				<li data-corners="false" data-shadow="false" data-iconshadow="true"
-					data-wrapperels="div" data-icon="arrow-r" data-iconpos="right"
+				<li data-corners="false" data-shadow="false" 
+					data-wrapperels="div" 
 					data-theme="c"
-					class="ui-btn ui-btn-icon-right
+					class="ui-btn 
 					ui-li-has-arrow ui-li ui-first-child ui-btn-hover-c"><div
 						class="ui-btn-inner ui-li">
-						<div class="ui-btn-text">
-							<a onclick="loadMiddleContent()" class="ui-link-inherit">请示代办</a>
+						<div class="ui-btn-text" style="text-align:center;">
+							<a onclick="loadMiddleContent()" class="ui-link-inherit"><img src="../assets/home/xinwen.jpg" width="100px" height="80px"/></a>
+						<br><span>新闻</span>
 						</div>
-						<span class="ui-icon ui-icon-arrow-r ui-icon-shadow">&nbsp;</span>
 					</div></li>
 				<li data-corners="false" data-shadow="false" data-iconshadow="true"
 					data-wrapperels="div" data-icon="arrow-r" data-iconpos="right"
 					data-theme="c"
-					class="ui-btn ui-btn-icon-right ui-li-has-arrow ui-li ui-btn-up-c"><div
+					class="ui-btn  ui-li-has-arrow ui-li ui-btn-up-c"><div
 						class="ui-btn-inner ui-li">
-						<div class="ui-btn-text">
-							<a class="ui-link-inherit">请示查阅</a>
+						<div class="ui-btn-text" style="text-align:center;">
+							<a class="ui-link-inherit"><img src="../assets/home/daiban.png" width="100px" height="80px"/></a>
+							<br><span>代办</span>
 						</div>
-						<span class="ui-icon ui-icon-arrow-r ui-icon-shadow">&nbsp;</span>
 					</div></li>
 				<li data-corners="false" data-shadow="false" data-iconshadow="true"
 					data-wrapperels="div" data-icon="arrow-r" data-iconpos="right"
 					data-theme="c"
-					class="ui-btn ui-btn-up-c ui-btn-icon-right ui-li-has-arrow ui-li"><div
+					class="ui-btn ui-btn-up-c  ui-li-has-arrow ui-li"><div
 						class="ui-btn-inner ui-li">
-						<div class="ui-btn-text">
-							<a onclick="loadMiddleBIContent()" class="ui-link-inherit">BI图表</a>
+						<div class="ui-btn-text" style="text-align:center;">
+							<a onclick="loadMiddleBIContent()" class="ui-link-inherit"><img src="../assets/home/bi.jpg" width="100px" height="80px"/></a>
+							<br><span>bi图表</span>
 						</div>
-						<span class="ui-icon ui-icon-arrow-r ui-icon-shadow">&nbsp;</span>
 					</div></li>
 				<li data-corners="false" data-shadow="false" data-iconshadow="true"
 					data-wrapperels="div" data-icon="arrow-r" data-iconpos="right"
 					data-theme="c"
-					class="ui-btn ui-btn-up-c ui-btn-icon-right ui-li-has-arrow ui-li"><div
+					class="ui-btn ui-btn-up-c  ui-li-has-arrow ui-li"><div
 						class="ui-btn-inner ui-li">
-						<div class="ui-btn-text">
-							<a href="#" class="ui-link-inherit">安全生产值班表</a>
+						<div class="ui-btn-text" style="text-align:center;">
+							<a href="#" class="ui-link-inherit"><img src="../assets/home/anquan.png" width="100px" height="80px" /></a>
+							<br><span>安全生产值班表</span>
 						</div>
-						<span class="ui-icon ui-icon-arrow-r ui-icon-shadow">&nbsp;</span>
 					</div></li>
 				<li data-corners="false" data-shadow="false" data-iconshadow="true"
 					data-wrapperels="div" data-icon="arrow-r" data-iconpos="right"
 					data-theme="c"
-					class="ui-btn ui-btn-up-c ui-btn-icon-right ui-li-has-arrow ui-li ui-last-child"><div
+					class="ui-btn ui-btn-up-c  ui-li-has-arrow ui-li ui-last-child"><div
 						class="ui-btn-inner ui-li">
-						<div class="ui-btn-text">
-							<a href="#" class="ui-link-inherit">Ferrari</a>
+						<div class="ui-btn-text" style="text-align:center;">
+							<a href="#" class="ui-link-inherit"><img src="../assets/home/chayue.png" width="100px" height="80px"/></a>
+							<br><span>请示查阅</span>
 						</div>
-						<span class="ui-icon ui-icon-arrow-r ui-icon-shadow">&nbsp;</span>
 					</div></li>
 			</ul>
 		</div>
-		<div class="grid_5" id="middleContent">正在加载中...</div>
-		<div class="grid_5" id="rightContent">正在加载中...</div>
-	</div>
+		<div class="grid_5" id="middleContent" >正在加载中...</div>
+		<div class="grid_5" id="rightContent" >正在加载中...</div>
 	</div>
 
 </body>
