* 调整页面内容

--- a/html/forgetPwd.html
+++ b/html/forgetPwd.html
@@ -111,7 +111,7 @@
 				</div>
 				<div class="ui-block-b">
 				</div>
-				<div class="ui-block-c">
+				<div class="ui-block-c" style="width: 200px;">
 					<a href="javascript:void(0)"  onclick="reset()" data-theme="f" data-role="button" data-icon="false">重置密码</a>
 				</div>
 				<div class="ui-block-d">
@@ -120,7 +120,7 @@
 				</div>
 			</div>
 
-			<div style="max-width:400px;background-color: #ADADAD;" border="1px" >
+			<div style="max-width:400px;background-color: #ADADAD;display: none;" border="1px" >
 				<p>密码重置成功，新密码已发送到188****8890
 			</div>
 
