上拉刷新完整提交

--- a/html/ipad.html
+++ b/html/ipad.html
@@ -17,7 +17,7 @@
 <script src="../lib/json/json2.js"></script>
 <script src="../lib/hori/hori.js?tag=21369"></script>
 <script src="../lib/jquery-mobile/jquery.mobile-latest/jquery.mobile.min.js"></script>
-<script src="../lib/knockout/knockout-2.3.0.debug.js"></script>
+<script src="../lib/knockout/knockout.js"></script>
 <script src="../lib/knockout/knockout.mapping.js"></script>
 <script src="../lib/swiper/idangerous.swiper.min.js"></script>
 <script src="../lib/app/home/news.js"></script>
@@ -184,7 +184,7 @@ sul.style.height=h+"px";
 					ui-li-has-arrow ui-li ui-first-child ui-btn-hover-c"><div
 						class="ui-btn-inner ui-li">
 						<div class="ui-btn-text" style="text-align:center;">
-							<a onclick="loadMiddleContent()" class="ui-link-inherit"><img src="../assets/home/xinwen.jpg" width="100px" height="80px"/></a>
+							<a onclick="loadMiddleContent()" class="ui-link-inherit"><img src="../assets/home/mail.png" width="100px" height="80px"/></a>
 						<br><span>新闻</span>
 						</div>
 					</div></li>
@@ -194,7 +194,7 @@ sul.style.height=h+"px";
 					class="ui-btn  ui-li-has-arrow ui-li ui-btn-up-c"><div
 						class="ui-btn-inner ui-li">
 						<div class="ui-btn-text" style="text-align:center;">
-							<a class="ui-link-inherit"><img src="../assets/home/daiban.png" width="100px" height="80px"/></a>
+							<a class="ui-link-inherit"><img src="../assets/home/news.png" width="100px" height="80px"/></a>
 							<br><span>代办</span>
 						</div>
 					</div></li>
@@ -204,7 +204,7 @@ sul.style.height=h+"px";
 					class="ui-btn ui-btn-up-c  ui-li-has-arrow ui-li"><div
 						class="ui-btn-inner ui-li">
 						<div class="ui-btn-text" style="text-align:center;">
-							<a onclick="loadMiddleBIContent()" class="ui-link-inherit"><img src="../assets/home/bi.jpg" width="100px" height="80px"/></a>
+							<a onclick="loadMiddleBIContent()" class="ui-link-inherit"><img src="../assets/home/bi.png" width="100px" height="80px"/></a>
 							<br><span>bi图表</span>
 						</div>
 					</div></li>
@@ -214,7 +214,7 @@ sul.style.height=h+"px";
 					class="ui-btn ui-btn-up-c  ui-li-has-arrow ui-li"><div
 						class="ui-btn-inner ui-li">
 						<div class="ui-btn-text" style="text-align:center;">
-							<a href="#" class="ui-link-inherit"><img src="../assets/home/anquan.png" width="100px" height="80px" /></a>
+							<a href="#" class="ui-link-inherit"><img src="../assets/home/news.png" width="100px" height="80px" /></a>
 							<br><span>安全生产值班表</span>
 						</div>
 					</div></li>
@@ -224,7 +224,7 @@ sul.style.height=h+"px";
 					class="ui-btn ui-btn-up-c  ui-li-has-arrow ui-li ui-last-child"><div
 						class="ui-btn-inner ui-li">
 						<div class="ui-btn-text" style="text-align:center;">
-							<a href="#" class="ui-link-inherit"><img src="../assets/home/chayue.png" width="100px" height="80px"/></a>
+							<a href="#" class="ui-link-inherit"><img src="../assets/home/news.png" width="100px" height="80px"/></a>
 							<br><span>请示查阅</span>
 						</div>
 					</div></li>
