首页 页面设计更改 bi.html页面设计更改 图片显示  以及附件显示 部分修改（未完善）

--- a/html/login.html
+++ b/html/login.html
@@ -92,7 +92,7 @@
 						//$.cookie("itcode",username,{"expires":360000,path:"/"})
 						saveUserInfoToLocal(username);
 						
-						var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/home.html";	
+						var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/home2.html";	
 						var componentURL="";
 						targetURL=encodeURI(targetURL);
 						
