--- a/html/bi.html
+++ b/html/bi.html
@@ -102,7 +102,7 @@
 <div data-role="content" align="center">
 		<div class="ui-grid-b" id="divBi">
 		<div data-bind="foreach: list" style="width:100%;">
-			<div class="ui-block-c"style="width:30%;">
+			<div class="ui-block-c"style="width:33.3%;margin-bottom:20px;margin-top:20px;">
 				<a  data-bind="attr:{'href':target}" > <img
 					id="imgToDo" data-bind="attr:{'src':img}" class="module-icon"/>
 				</a> <br /> 
